merge App into PdeLanguageServer, more cleaning